--- a/doc.html
+++ b/doc.html
@@ -2,17 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="doc.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
   </head>
   <body>
-    <h1>new document</h1>
-    <p>this is new document</p>
-    <h3>this is main</h3>
-    <ul>
-      <li></li>
-    </ul>
-    <address>29 street</address>
-    <footer>the end</footer>
+    <header></header>
+    <div class="left-side"></div>
   </body>
 </html>
