--- a/doc.html
+++ b/doc.html
@@ -16,6 +16,30 @@
   </head>
   <body>
     <header></header>
-    <div class="left-side"></div>
+    <div class="content">
+      <div class="left-side">
+        <ul class="nav-list">
+          <li>
+            <a href="#"><i class="fa-solid fa-house"></i><span></span>HOTEL</a>
+          </li>
+          <li>
+            <a href="#"
+              ><span><i class="fa-solid fa-plane-circle-check"></i></span
+              >FLIGHT</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><span><i class="fa-solid fa-key"></i></span>CAR RENTAL</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><span><i class="fa-solid fa-map-location-dot"></i></span>TOURS</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
