--- a/doc.html
+++ b/doc.html
@@ -15,7 +15,12 @@
     <title>Doc</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src="logo-2c0fa006.png" class="header-img" />
+      <form class="search">
+        <input type="text" />
+      </form>
+    </header>
 
     <div class="content">
       <div class="left-side">
