--- a/doc.html
+++ b/doc.html
@@ -17,9 +17,9 @@
   <body>
     <header>
       <img src="logo-2c0fa006.png" class="header-img" />
-      <form class="search">
-        <input type="text" />
-      </form>
+      <div class="search-bar" placeholder="Search hotels">
+        <i class="fa-solid fa-magnifying-glass-location"></i>
+      </div>
     </header>
 
     <div class="content">
