--- a/doc.html
+++ b/doc.html
@@ -17,8 +17,26 @@
   <body>
     <header>
       <img src="logo-2c0fa006.png" class="header-img" />
-      <div class="search-bar" placeholder="Search hotels">
-        <i class="fa-solid fa-magnifying-glass-location"></i>
+      <div class="search-bar">
+        <input type="text" class="search-input" placeholder="Search hotels" />
+        <i class="fas fa-search search-icon"></i>
+      </div>
+      <div class="header-right">
+        <div class="notif-icons">
+          <div class="icon-wrapper">
+            <i class="fas fa-bookmark"></i>
+            <span class="badge">7</span>
+          </div>
+          <div class="icon-wrapper">
+            <i class="fas fa-comments"></i>
+            <span class="badge">11</span>
+          </div>
+        </div>
+
+        <div class="user-profile">
+          <img src="profile.png" class="user-pics" />
+          <span class="user-name">David</span>
+        </div>
       </div>
     </header>
 
@@ -38,6 +56,10 @@
             <a href="#"><i class="fa-solid fa-map-location"></i>TOURS</a>
           </li>
         </ul>
+
+        <div class="left-footer">
+          <p>© 2023 by trillo. All rights reserved.</p>
+        </div>
       </div>
       <div class="gallery-img">
         <img src="img1.jpg" />
