--- a/doc.html
+++ b/doc.html
@@ -61,11 +61,21 @@
           <p>© 2023 by trillo. All rights reserved.</p>
         </div>
       </div>
+      <div class="hotel-card">
+        <div class="gallery-img">
+          <img src="img1.jpg" />
+          <img src="img2.jpg" />
+          <img src="img3.jpg" />
+        </div>
+        <div class="hotel-info">
+          <h2>HOTEL EUROPA</h2>
 
-      <div class="gallery-img">
-        <img src="img1.jpg" />
-        <img src="img2.jpg" />
-        <img src="img3.jpg" />
+          <span><i class="fa-solid fa-star"></i></span>
+          <span><i class="fa-solid fa-star"></i></span>
+          <span><i class="fa-solid fa-star"></i></span>
+          <span><i class="fa-solid fa-star"></i></span>
+          <span><i class="fa-solid fa-star"></i></span>
+        </div>
       </div>
     </div>
   </body>
