--- a/doc.html
+++ b/doc.html
@@ -69,12 +69,17 @@
         </div>
         <div class="hotel-info">
           <h2>HOTEL EUROPA</h2>
-
-          <span><i class="fa-solid fa-star"></i></span>
-          <span><i class="fa-solid fa-star"></i></span>
-          <span><i class="fa-solid fa-star"></i></span>
-          <span><i class="fa-solid fa-star"></i></span>
-          <span><i class="fa-solid fa-star"></i></span>
+          <div class="stars">
+            <span><i class="fa-solid fa-star"></i></span>
+            <span><i class="fa-solid fa-star"></i></span>
+            <span><i class="fa-solid fa-star"></i></span>
+            <span><i class="fa-solid fa-star"></i></span>
+            <span><i class="fa-solid fa-star"></i></span>
+          </div>
+          <div class="location">
+            <i class="fa-solid fa-location-dot"></i>
+            <button class="btn">Budva, Montenegro</button>
+          </div>
         </div>
       </div>
     </div>
