--- a/doc.html
+++ b/doc.html
@@ -68,17 +68,25 @@
           <img src="img3.jpg" />
         </div>
         <div class="hotel-info">
-          <h2>HOTEL EUROPA</h2>
-          <div class="stars">
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
+          <div class="hotel-left">
+            <h2>HOTEL EUROPA</h2>
+            <div class="stars">
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+            </div>
           </div>
-          <div class="location">
-            <i class="fa-solid fa-location-dot"></i>
-            <button class="btn">Budva, Montenegro</button>
+          <div class="hotel-right">
+            <a class="location" href="#" target="_blank">
+              <i class="fa-solid fa-location-dot"></i>
+              <span>Budva, Montenegro</span>
+            </a>
+            <div class="rating">
+              <p class="rating-average">8.6</p>
+              <p class="rating-count">429 VOTES</p>
+            </div>
           </div>
         </div>
       </div>
