--- a/doc.html
+++ b/doc.html
@@ -91,5 +91,40 @@
         </div>
       </div>
     </div>
+    <div class="details">
+      <div class="description">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi
+          dignissimos debitis ratione sapiente saepe. Accusantium cumque, quas,
+          ut corporis incidunt deserunt quae architecto voluptate.
+        </p>
+        <p>
+          Accusantium cumque, quas, ut corporis incidunt deserunt quae
+          architecto voluptate delectus, inventore iure aliquid aliquam.
+        </p>
+<div class="list-about-hotel">
+        <ul class="left-list">
+          <li>Breakfast Included</li>
+          <li>Free airport shuttle</li>
+          <li>Air conditioning and heating</li>
+          <li>We speak all languages</li>
+        </ul>
+        <ul class="right-list">
+          <li>Close to the beach</li>
+          <li>Free wifi in all rooms</li>
+          <li>Pets alowed</li>
+          <li>Perfect for families</li>
+        </ul>
+      </div>
+        <div class="left-comments">
+          <p>Lucy and 3 other friends recommend this hotel.</p>
+          <img src="ppl1.jpg" class="ftr-img" />
+          <img src="ppl2.jpg" class="ftr-img" />
+          <img src="ppl3.jpg" class="ftr-img" />
+          <img src="ppl4.jpg" class="ftr-img" />
+        </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
