--- a/doc.html
+++ b/doc.html
@@ -67,7 +67,7 @@
           <img src="img2.jpg" />
           <img src="img3.jpg" />
         </div>
-
+      
         <div class="hotel-info">
           <div class="hotel-left">
             <h2>HOTEL EUROPA</h2>
@@ -156,7 +156,8 @@
               <div class="comment-box">
                 <span class="quote-icon">❝</span>
                 <p class="comment-text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Fuga doloremque architecto dicta animi.
                 </p>
                 <div class="comment-footer">
                   <div class="user-info">
