--- a/doc.html
+++ b/doc.html
@@ -68,13 +68,7 @@
           <img src="img3.jpg" />
         </div>
 
-        <li>
-          <h6></h6>
-<h5>new</title></h5>
-<ul>
-  
-</ul>
-        </li>
+<aside>navbar</aside>
       
         <div class="hotel-info">
           <div class="hotel-left">
